--- a/src/app/input-parameters/input-parameters.component.css
+++ b/src/app/input-parameters/input-parameters.component.css
@@ -1,5 +1,29 @@
-body
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+  text-align: center !important;
+}
+
+.example-full-width,mat-form-field {
+  width: 35%;
+}
+.example-button-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.button_calculate
 {
+background-color: white;
+border-radius: 5px;
+border: 2px solid black;
+width: 20%;
+}
+.input_parameters
+{
+  text-align: center;
+  padding-top:1%;
   text-align: center;
   padding-top:1%;
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0.29) 64%, rgba(255,214,214,0.05) 90%, rgba(255,214,214,0) 95%); /* ff3.6+ */
@@ -9,4 +33,26 @@ body
   background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0.29) 64%, rgba(255,214,214,0.05) 90%, rgba(255,214,214,0) 95%); /* ie10+ */
   background:radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(255,255,255,0.29) 64%, rgba(255,214,214,0.05) 90%, rgba(255,214,214,0) 95%); /* w3c */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#FFD6D6',GradientType=1 ); /* ie6-9 */
+}
+button
+{
+  width: 150px;
+}
+
+.recommended, .users_prevalence
+{
+  color: black;
+  font-size: 20px;
+}
+.manuscript
+{
+  display: inline-block;
+  padding:2%;
+  padding-top: 4%;
+  font-size: 20px;
+}
+hr
+{
+  margin: 0;
+  padding: 0;
 }
